# QT_Paint

./: CMakeLists.txt  command.cpp  command.h  paint.cpp  paint.h  paint.ui  paintscene.cpp  paintscene.h  resources.qrc
